--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -142,3 +142,14 @@ services:
       - "8086:8081"   # telemetry (opsional)
     networks: [observability]
     restart: unless-stopped
+
+  demo-app:
+    build:
+      context: ./demo-app
+    container_name: demo-app
+    environment:
+      - PORT=8080
+    ports:
+      - "8081:8080" # host:container
+    networks: [observability]
+    restart: unless-stopped
