--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -24,3 +24,8 @@ scrape_configs:
     metrics_path: /metrics
     static_configs:
       - targets: ["tempo:3200"]
+
+  - job_name: demo-app
+    metrics_path: /metrics
+    static_configs:
+      - targets: ["demo-app:8080"]
