--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -149,6 +149,8 @@ services:
     container_name: demo-app
     environment:
       - PORT=8080
+      - OTEL_EXPORTER_OTLP_ENDPOINT=http://tempo:4318
+      - OTEL_SERVICE_NAME=demo-app
     ports:
       - "8081:8080" # host:container
     networks: [observability]
