--- a/demo-app/Dockerfile
+++ b/demo-app/Dockerfile
@@ -1,12 +1,16 @@
-FROM golang:1.22-alpine AS build
+FROM docker.io/library/golang:1.22-alpine AS build
 WORKDIR /app
-COPY go.mod ./
-RUN go mod download
+RUN apk add --no-cache git
+
+COPY go.mod go.sum ./
+RUN /usr/local/go/bin/go mod download
+
 COPY . .
-RUN CGO_ENABLED=0 GOOS=linux go build -o /demo-app main.go
+RUN /usr/local/go/bin/go version
+RUN CGO_ENABLED=0 GOOS=linux /usr/local/go/bin/go build -trimpath -ldflags="-s -w" -o /demo-app ./main.go
 
 FROM alpine:3.20
-WORKDIR /app
 COPY --from=build /demo-app /usr/local/bin/demo-app
 EXPOSE 8080
 CMD ["/usr/local/bin/demo-app"]
+
