--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       - --web.enable-lifecycle
     volumes:
       - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+      - ./prometheus/rules:/etc/prometheus/rules:ro
       - prometheus_data:/prometheus
     ports:
       - "9090:9090"
@@ -127,22 +128,6 @@ services:
     networks: [observability]
     restart: unless-stopped
 
-  kube-state-metrics:
-    image: registry.k8s.io/kube-state-metrics/kube-state-metrics:v2.13.0
-    container_name: kube-state-metrics
-    command:
-      - --kubeconfig=/kube/config
-      - --port=8080
-      - --telemetry-port=8081
-    volumes:
-      # taruh kubeconfig di folder project: ./kube/config
-      - ./kube/config:/kube/config:ro
-    ports:
-      - "8085:8080"   # metrics utama
-      - "8086:8081"   # telemetry (opsional)
-    networks: [observability]
-    restart: unless-stopped
-
   demo-app:
     build:
       context: ./demo-app
@@ -153,5 +138,18 @@ services:
       - OTEL_SERVICE_NAME=demo-app
     ports:
       - "8081:8080" # host:container
+    networks: [observability]
+    restart: unless-stopped
+
+  alertmanager:
+    image: prom/alertmanager:v0.27.0
+    container_name: alertmanager
+    command:
+      - --config.file=/etc/alertmanager/alertmanager.yml
+      - --storage.path=/alertmanager
+    volumes:
+      - ./alertmanager/alertmanager.yml:/etc/alertmanager/alertmanager.yml:ro
+    ports:
+      - "9093:9093"
     networks: [observability]
     restart: unless-stopped
