--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -29,3 +29,11 @@ scrape_configs:
     metrics_path: /metrics
     static_configs:
       - targets: ["demo-app:8080"]
+
+alerting:
+  alertmanagers:
+    - static_configs:
+        - targets: ["alertmanager:9093"]
+
+rule_files:
+  - /etc/prometheus/rules/*.yml
